@@ -13,16 +13,19 @@ import jakarta.json.stream.JsonParser;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
+import java.util.AbstractMap;
 import java.util.Collection;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
 import java.util.zip.GZIPInputStream;
 import javax.annotation.CheckForNull;
 import javax.annotation.Nonnull;
@@ -34,6 +37,7 @@ import org.opensearch.client.opensearch._types.ErrorCause;
 import org.opensearch.client.opensearch._types.ErrorResponse;
 import org.opensearch.client.opensearch._types.OpenSearchException;
 import org.opensearch.client.transport.Endpoint;
+import org.opensearch.client.transport.GenericEndpoint;
 import org.opensearch.client.transport.JsonEndpoint;
 import org.opensearch.client.transport.OpenSearchTransport;
 import org.opensearch.client.transport.TransportException;
@@ -46,6 +50,7 @@ import software.amazon.awssdk.auth.credentials.DefaultCredentialsProvider;
 import software.amazon.awssdk.auth.signer.Aws4Signer;
 import software.amazon.awssdk.auth.signer.params.Aws4SignerParams;
 import software.amazon.awssdk.http.AbortableInputStream;
+import software.amazon.awssdk.http.Header;
 import software.amazon.awssdk.http.HttpExecuteRequest;
 import software.amazon.awssdk.http.HttpExecuteResponse;
 import software.amazon.awssdk.http.SdkHttpClient;
@@ -259,11 +264,12 @@ public class AwsSdk2Transport implements OpenSearchTransport {
                 .map(o -> o instanceof AwsSdk2TransportOptions ? ((AwsSdk2TransportOptions) o) : null)
                 .map(AwsSdk2TransportOptions::mapper)
                 .orElse(defaultMapper);
-            final int maxUncompressedSize = Optional.ofNullable(options)
-                .map(o -> o instanceof AwsSdk2TransportOptions ? ((AwsSdk2TransportOptions) o) : null)
-                .map(AwsSdk2TransportOptions::requestCompressionSize)
-                .or(() -> Optional.ofNullable(transportOptions.requestCompressionSize()))
-                .orElse(DEFAULT_REQUEST_COMPRESSION_SIZE);
+            final int maxUncompressedSize = or(
+                Optional.ofNullable(options)
+                    .map(o -> o instanceof AwsSdk2TransportOptions ? ((AwsSdk2TransportOptions) o) : null)
+                    .map(AwsSdk2TransportOptions::requestCompressionSize),
+                () -> Optional.ofNullable(transportOptions.requestCompressionSize())
+            ).orElse(DEFAULT_REQUEST_COMPRESSION_SIZE);
 
             OpenSearchRequestBodyBuffer buffer = new OpenSearchRequestBodyBuffer(mapper, maxUncompressedSize);
             buffer.addContent(request);
@@ -278,7 +284,7 @@ public class AwsSdk2Transport implements OpenSearchTransport {
         Endpoint<RequestT, ?, ?> endpoint,
         @CheckForNull TransportOptions options,
         @CheckForNull OpenSearchRequestBodyBuffer body
-    ) {
+    ) throws UnsupportedEncodingException {
         SdkHttpFullRequest.Builder req = SdkHttpFullRequest.builder().method(SdkHttpMethod.fromValue(endpoint.method(request)));
 
         StringBuilder url = new StringBuilder();
@@ -291,9 +297,9 @@ public class AwsSdk2Transport implements OpenSearchTransport {
         Map<String, String> params = endpoint.queryParameters(request);
         if (params != null && !params.isEmpty()) {
             char sep = '?';
-            for (var ent : params.entrySet()) {
+            for (Map.Entry<String, String> ent : params.entrySet()) {
                 url.append(sep).append(ent.getKey()).append('=');
-                url.append(URLEncoder.encode(ent.getValue(), StandardCharsets.UTF_8));
+                url.append(URLEncoder.encode(ent.getValue(), "UTF-8"));
                 sep = '&';
             }
         }
@@ -319,22 +325,24 @@ public class AwsSdk2Transport implements OpenSearchTransport {
             req.putHeader("x-amz-content-sha256", "required");
         }
 
-        boolean responseCompression = Optional.ofNullable(options)
-            .map(o -> o instanceof AwsSdk2TransportOptions ? ((AwsSdk2TransportOptions) o) : null)
-            .map(AwsSdk2TransportOptions::responseCompression)
-            .or(() -> Optional.ofNullable(transportOptions.responseCompression()))
-            .orElse(Boolean.TRUE);
+        boolean responseCompression = or(
+            Optional.ofNullable(options)
+                .map(o -> o instanceof AwsSdk2TransportOptions ? ((AwsSdk2TransportOptions) o) : null)
+                .map(AwsSdk2TransportOptions::responseCompression),
+            () -> Optional.ofNullable(transportOptions.responseCompression())
+        ).orElse(Boolean.TRUE);
         if (responseCompression) {
             req.putHeader("Accept-Encoding", "gzip");
         } else {
             req.removeHeader("Accept-Encoding");
         }
 
-        final AwsCredentialsProvider credentials = Optional.ofNullable(options)
-            .map(o -> o instanceof AwsSdk2TransportOptions ? ((AwsSdk2TransportOptions) o) : null)
-            .map(AwsSdk2TransportOptions::credentials)
-            .or(() -> Optional.ofNullable(transportOptions.credentials()))
-            .orElse(DefaultCredentialsProvider.create());
+        final AwsCredentialsProvider credentials = or(
+            Optional.ofNullable(options)
+                .map(o -> o instanceof AwsSdk2TransportOptions ? ((AwsSdk2TransportOptions) o) : null)
+                .map(AwsSdk2TransportOptions::credentials),
+            () -> Optional.ofNullable(transportOptions.credentials())
+        ).orElse(DefaultCredentialsProvider.create());
 
         Aws4SignerParams signerParams = Aws4SignerParams.builder()
             .awsCredentials(credentials.resolveCredentials())
@@ -344,7 +352,7 @@ public class AwsSdk2Transport implements OpenSearchTransport {
         return Aws4Signer.create().sign(req.build(), signerParams);
     }
 
-    private void applyOptionsParams(StringBuilder url, TransportOptions options) {
+    private void applyOptionsParams(StringBuilder url, TransportOptions options) throws UnsupportedEncodingException {
         if (options == null) {
             return;
         }
@@ -353,7 +361,7 @@ public class AwsSdk2Transport implements OpenSearchTransport {
             char sep = url.indexOf("?") < 0 ? '?' : '&';
             for (Map.Entry<String, String> param : params.entrySet()) {
                 url.append(sep).append(param.getKey()).append('=');
-                url.append(URLEncoder.encode(param.getValue(), StandardCharsets.UTF_8));
+                url.append(URLEncoder.encode(param.getValue(), "UTF-8"));
                 sep = '?';
             }
         }
@@ -387,7 +395,15 @@ public class AwsSdk2Transport implements OpenSearchTransport {
         try {
             bodyStream = executeResponse.responseBody().orElse(null);
             SdkHttpResponse httpResponse = executeResponse.httpResponse();
-            return parseResponse(httpResponse, bodyStream, endpoint, options);
+            return parseResponse(
+                httpRequest.getUri(),
+                httpRequest.method(),
+                httpRequest.protocol(),
+                httpResponse,
+                bodyStream,
+                endpoint,
+                options
+            );
         } finally {
             if (bodyStream != null) {
                 bodyStream.close();
@@ -415,7 +431,17 @@ public class AwsSdk2Transport implements OpenSearchTransport {
                 CompletableFuture<ResponseT> ret = new CompletableFuture<>();
                 try {
                     InputStream bodyStream = new ByteArrayInputStream(responseBody);
-                    ret.complete(parseResponse(response, bodyStream, endpoint, options));
+                    ret.complete(
+                        parseResponse(
+                            httpRequest.getUri(),
+                            httpRequest.method(),
+                            httpRequest.protocol(),
+                            response,
+                            bodyStream,
+                            endpoint,
+                            options
+                        )
+                    );
                 } catch (Throwable e) {
                     ret.completeExceptionally(e);
                 }
@@ -424,6 +450,9 @@ public class AwsSdk2Transport implements OpenSearchTransport {
     }
 
     private <ResponseT, ErrorT> ResponseT parseResponse(
+        URI uri,
+        @Nonnull SdkHttpMethod method,
+        String protocol,
         @Nonnull SdkHttpResponse httpResponse,
         @CheckForNull InputStream bodyStream,
         @Nonnull Endpoint<?, ResponseT, ErrorT> endpoint,
@@ -472,24 +501,51 @@ public class AwsSdk2Transport implements OpenSearchTransport {
         }
 
         if (endpoint.isError(statusCode)) {
-            JsonpDeserializer<ErrorT> errorDeserializer = endpoint.errorDeserializer(statusCode);
-            if (errorDeserializer == null || bodyStream == null) {
-                throw new TransportException("Request failed with status code '" + statusCode + "'");
-            }
-            try {
-                try (JsonParser parser = mapper.jsonProvider().createParser(bodyStream)) {
-                    ErrorT error = errorDeserializer.deserialize(parser, mapper);
-                    throw new OpenSearchException((ErrorResponse) error);
+            if (endpoint instanceof GenericEndpoint) {
+                @SuppressWarnings("unchecked")
+                final GenericEndpoint<?, ResponseT> rawEndpoint = (GenericEndpoint<?, ResponseT>) endpoint;
+
+                String contentType = null;
+                if (bodyStream != null) {
+                    contentType = httpResponse.firstMatchingHeader(Header.CONTENT_TYPE).orElse(null);
                 }
-            } catch (OpenSearchException e) {
-                throw e;
-            } catch (Exception e) {
-                // can't parse the error - use a general exception
-                ErrorCause.Builder cause = new ErrorCause.Builder();
-                cause.type("http_exception");
-                cause.reason("server returned " + statusCode);
-                ErrorResponse error = ErrorResponse.of(err -> err.status(statusCode).error(cause.build()));
-                throw new OpenSearchException(error);
+
+                final ResponseT error = rawEndpoint.responseDeserializer(
+                    uri.toString(),
+                    method.name(),
+                    protocol,
+                    httpResponse.statusCode(),
+                    httpResponse.statusText().orElse(null),
+                    httpResponse.headers()
+                        .entrySet()
+                        .stream()
+                        .map(h -> new AbstractMap.SimpleEntry<String, String>(h.getKey(), Objects.toString(h.getValue())))
+                        .collect(Collectors.toList()),
+                    contentType,
+                    bodyStream
+                );
+
+                throw rawEndpoint.exceptionConverter(statusCode, error);
+            } else {
+                JsonpDeserializer<ErrorT> errorDeserializer = endpoint.errorDeserializer(statusCode);
+                if (errorDeserializer == null || bodyStream == null) {
+                    throw new TransportException("Request failed with status code '" + statusCode + "'");
+                }
+                try {
+                    try (JsonParser parser = mapper.jsonProvider().createParser(bodyStream)) {
+                        ErrorT error = errorDeserializer.deserialize(parser, mapper);
+                        throw new OpenSearchException((ErrorResponse) error);
+                    }
+                } catch (OpenSearchException e) {
+                    throw e;
+                } catch (Exception e) {
+                    // can't parse the error - use a general exception
+                    ErrorCause.Builder cause = new ErrorCause.Builder();
+                    cause.type("http_exception");
+                    cause.reason("server returned " + statusCode);
+                    ErrorResponse error = ErrorResponse.of(err -> err.status(statusCode).error(cause.build()));
+                    throw new OpenSearchException(error);
+                }
             }
         } else {
             if (endpoint instanceof BooleanEndpoint) {
@@ -517,9 +573,44 @@ public class AwsSdk2Transport implements OpenSearchTransport {
                     ;
                 }
                 return response;
+            } else if (endpoint instanceof GenericEndpoint) {
+                @SuppressWarnings("unchecked")
+                final GenericEndpoint<?, ResponseT> rawEndpoint = (GenericEndpoint<?, ResponseT>) endpoint;
+
+                String contentType = null;
+                if (bodyStream != null) {
+                    contentType = httpResponse.firstMatchingHeader(Header.CONTENT_TYPE).orElse(null);
+                }
+
+                return rawEndpoint.responseDeserializer(
+                    uri.toString(),
+                    method.name(),
+                    protocol,
+                    httpResponse.statusCode(),
+                    httpResponse.statusText().orElse(null),
+                    httpResponse.headers()
+                        .entrySet()
+                        .stream()
+                        .map(h -> new AbstractMap.SimpleEntry<String, String>(h.getKey(), Objects.toString(h.getValue())))
+                        .collect(Collectors.toList()),
+                    contentType,
+                    bodyStream
+                );
             } else {
                 throw new TransportException("Unhandled endpoint type: '" + endpoint.getClass().getName() + "'");
             }
+        }
+    }
+
+    private static <T> Optional<T> or(Optional<T> opt, Supplier<? extends Optional<? extends T>> supplier) {
+        Objects.requireNonNull(opt);
+        Objects.requireNonNull(supplier);
+        if (opt.isPresent()) {
+            return opt;
+        } else {
+            @SuppressWarnings("unchecked")
+            Optional<T> r = (Optional<T>) supplier.get();
+            return Objects.requireNonNull(r);
         }
     }
 }
